# JustDoIt

./: .env  CHANGELOG.md  Cargo.toml  diesel.toml  justdoit.sqlite
.github/workflows/: release-please.yml
migrations/2023-11-17-191921_create_task/: down.sql  up.sql
migrations/sqlite/2023-11-17-191921_create_task/: up.sql
src/: http.rs  lib.rs  main.rs  models.rs  schema.rs
