[package]
name = "justdoit"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
diesel = { version = "2.1.4", features = ["sqlite", "chrono"] }
dotenvy = "0.15.7"
