[package]
name = "justdoit"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version ="0.4.31", features = ["serde"]}
clap = { version = "4.4.8", features = ["derive"] }
diesel = { version = "2.1.4", features = ["sqlite", "chrono"] }
diesel_migrations = "2.1.0"
dirs = "5.0.1"
dotenvy = "0.15.7"
env_logger = "0.10.1"
log = "0.4.20"
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.192"
